--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+<header class="main-header container">
 <h1>SpaceWalkers</h1>
  <!-- navigation code here -->
  <nav>
@@ -26,6 +26,7 @@
    <a href="#">Contact</a>
    <a href="#">Sign In</a>
   </nav>
+  </header>
   <div class="container home">
 
     <header class="intro">
